sf-hrms/force-app/main/default/objects/Salary_Component__c/fields/Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Type__c</fullName>
    <label>Calculation Type</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Fixed</fullName><default>true</default><label>Fixed</label></value>
        <value><fullName>Percentage_of_Basic</fullName><default>false</default><label>Percentage of Basic</label></value>
        <value><fullName>Percentage_of_CTC</fullName><default>false</default><label>Percentage of CTC</label></value>
    </valueSetDefinition></valueSet>
</CustomField>