sf-hrms/force-app/main/default/objects/Salary_Component__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Earning</fullName><default>true</default><label>Earning</label></value>
        <value><fullName>Deduction</fullName><default>false</default><label>Deduction</label></value>
    </valueSetDefinition></valueSet>
</CustomField>