sf-hrms/force-app/main/default/objects/Salary_Component__c/fields/Default_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Default_Percentage__c</fullName>
    <label>Default Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>