sf-hrms/force-app/main/default/objects/Salary_Component__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <label>Display Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>