sf-hrms/force-app/main/default/objects/Salary_Component__c/fields/Is_Statutory__c.field-meta.xml
<CustomField>
    <fullName>Is_Statutory__c</fullName>
    <label>Is Statutory</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>