sf-hrms/force-app/main/default/objects/Salary_Component__c/fields/Is_Taxable__c.field-meta.xml
<CustomField>
    <fullName>Is_Taxable__c</fullName>
    <label>Is Taxable</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>