sf-hrms/force-app/main/default/objects/Salary_Component__c/fields/Statutory_Type__c.field-meta.xml
<CustomField><fullName>Statutory_Type__c</fullName><label>Statutory Type</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>None</fullName><default>true</default></value><value><fullName>PF</fullName><default>false</default></value><value><fullName>ESI</fullName><default>false</default></value><value><fullName>PT</fullName><default>false</default></value><value><fullName>TDS</fullName><default>false</default></value></valueSetDefinition></valueSet></CustomField>